# ai-governance-approval-workbench

./: .gitignore  Makefile  README.md  idea.md  pyproject.toml
app/: auth.py  config.py  db.py  main.py  seed.py  workflow.py
app/llm/: __init__.py  base.py  noop.py
app/models/: __init__.py  attachment.py  audit.py  condition.py  control.py  enums.py  intake.py  re_review.py  review.py  review_packet.py  state_transition.py  types.py  use_case.py  user.py
app/policy/: __init__.py  rubric.json  template.json
app/routes/: attachments.py  audit.py  dashboard.py  ui.py  use_cases.py
app/services/: attachments.py  audit.py  controls.py  expiring.py  lifecycle.py  packet.py  scoring.py  sod.py  users.py
app/templates/: base.html  dashboard.html  login.html  use_case_detail.html  use_case_new.html
docker/: Dockerfile  compose.yml
docs/: DEMO.md  lessons-learned.md  sample-decision-packet.md  security-review.md
docs/superpowers/plans/: 2026-04-18-ai-governance-workbench.md  2026-04-25-dashboard-expiring-soon.md
docs/superpowers/specs/: 2026-04-17-ai-governance-workbench-design.md  2026-04-17-ai-governance-workbench-scoping.md  2026-04-25-dashboard-expiring-soon-design.md
seed/: use_cases.json  users.json
tests/: conftest.py  test_attachments.py  test_audit.py  test_auth.py  test_config.py  test_controls.py  test_dashboard.py  test_expiring.py  test_lifecycle.py  test_llm.py  test_models.py  test_packet.py  test_re_review.py  test_reviews.py  test_routes.py  test_scoring.py  test_seed.py  test_smoke.py  test_sod.py  test_ui.py  test_workflow.py
